--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -35,19 +35,562 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-02T10:32:28.518104Z",
+     "start_time": "2021-04-02T10:32:27.803731Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "# your code here"
+    "import pandas as pd\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-02T10:32:28.698459Z",
+     "start_time": "2021-04-02T10:32:28.588981Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>shop_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>item_price</th>\n",
+       "      <th>item_cnt_day</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1469</td>\n",
+       "      <td>1199.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>28</td>\n",
+       "      <td>21364</td>\n",
+       "      <td>479.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>28</td>\n",
+       "      <td>21365</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>28</td>\n",
+       "      <td>22104</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>28</td>\n",
+       "      <td>22091</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4540</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>15</td>\n",
+       "      <td>4240</td>\n",
+       "      <td>1299.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4541</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>14</td>\n",
+       "      <td>21922</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4542</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>3999.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4543</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>14</td>\n",
+       "      <td>22091</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4544</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1007</td>\n",
+       "      <td>1199.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4545 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     date  shop_id  item_id  item_price  item_cnt_day\n",
+       "0     2015-01-04 00:00:00       29     1469      1199.0           1.0\n",
+       "1     2015-01-04 00:00:00       28    21364       479.0           1.0\n",
+       "2     2015-01-04 00:00:00       28    21365       999.0           2.0\n",
+       "3     2015-01-04 00:00:00       28    22104       249.0           2.0\n",
+       "4     2015-01-04 00:00:00       28    22091       179.0           1.0\n",
+       "...                   ...      ...      ...         ...           ...\n",
+       "4540  2015-01-04 00:00:00       15     4240      1299.0           1.0\n",
+       "4541  2015-01-04 00:00:00       14    21922        99.0           1.0\n",
+       "4542  2015-01-04 00:00:00       15     1969      3999.0           1.0\n",
+       "4543  2015-01-04 00:00:00       14    22091       179.0           1.0\n",
+       "4544  2015-01-04 00:00:00       15     1007      1199.0           1.0\n",
+       "\n",
+       "[4545 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_sales = pd.read_csv('../data/retail_sales-raw_sales.csv',sep=';')\n",
+    "\n",
+    "raw_sales"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-02T10:32:28.930597Z",
+     "start_time": "2021-04-02T10:32:28.828144Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 4545 entries, 0 to 4544\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   date          4545 non-null   object \n",
+      " 1   shop_id       4545 non-null   int64  \n",
+      " 2   item_id       4545 non-null   int64  \n",
+      " 3   item_price    4545 non-null   float64\n",
+      " 4   item_cnt_day  4545 non-null   float64\n",
+      "dtypes: float64(2), int64(2), object(1)\n",
+      "memory usage: 177.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_sales.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-02T10:38:07.022153Z",
+     "start_time": "2021-04-02T10:38:06.928156Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>shop_id</th>\n",
+       "      <th>item_id</th>\n",
+       "      <th>item_price</th>\n",
+       "      <th>item_cnt_day</th>\n",
+       "      <th>item_profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1469</td>\n",
+       "      <td>1199.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1199.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>28</td>\n",
+       "      <td>21364</td>\n",
+       "      <td>479.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>479.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>28</td>\n",
+       "      <td>21365</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1998.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>28</td>\n",
+       "      <td>22104</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>498.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-01-04 00:00:00</td>\n",
+       "      <td>28</td>\n",
+       "      <td>22091</td>\n",
+       "      <td>179.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>179.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  date  shop_id  item_id  item_price  item_cnt_day  \\\n",
+       "0  2015-01-04 00:00:00       29     1469      1199.0           1.0   \n",
+       "1  2015-01-04 00:00:00       28    21364       479.0           1.0   \n",
+       "2  2015-01-04 00:00:00       28    21365       999.0           2.0   \n",
+       "3  2015-01-04 00:00:00       28    22104       249.0           2.0   \n",
+       "4  2015-01-04 00:00:00       28    22091       179.0           1.0   \n",
+       "\n",
+       "   item_profit  \n",
+       "0       1199.0  \n",
+       "1        479.0  \n",
+       "2       1998.0  \n",
+       "3        498.0  \n",
+       "4        179.0  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales = raw_sales.copy()\n",
+    "sales['item_profit'] = sales['item_cnt_day']*sales['item_price']\n",
+    "sales.to_csv('../data/clean_data.csv',sep='\\t',index=False)\n",
+    "sales.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-02T10:36:49.056608Z",
+     "start_time": "2021-04-02T10:36:49.003211Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_profit</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>shop_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>103746.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>67443.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>29361.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>33138.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>138678.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         item_profit\n",
+       "shop_id             \n",
+       "2           103746.0\n",
+       "3            67443.0\n",
+       "4            29361.0\n",
+       "5            33138.0\n",
+       "6           138678.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales.groupby('shop_id')[['item_profit']].sum().to_csv('../data/by_shop.csv',sep='\\t',index=True)\n",
+    "sales.groupby('shop_id')[['item_profit']].sum().head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-02T10:36:52.759832Z",
+     "start_time": "2021-04-02T10:36:52.694914Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>item_profit</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>item_id</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>507.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>1089.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>447.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>897.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>747.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         item_profit\n",
+       "item_id             \n",
+       "30             507.0\n",
+       "31            1089.0\n",
+       "32             447.0\n",
+       "42             897.0\n",
+       "59             747.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sales.groupby('item_id')[['item_profit']].sum().to_csv('../data/by_item.csv',sep='\\t',index=True)\n",
+    "sales.groupby('item_id')[['item_profit']].sum().head()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ironhack-3.7",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ironhack-3.7"
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.2"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
