--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white hanging heart t-light holder</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>white metal lantern</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>cream cupid hearts coat hanger</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>22.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0           0     536365    85123A  2010     12    3     8   \n",
+       "1           1     536365     71053  2010     12    3     8   \n",
+       "2           2     536365    84406B  2010     12    3     8   \n",
+       "\n",
+       "                          Description  Quantity          InvoiceDate  \\\n",
+       "0  white hanging heart t-light holder         6  2010-12-01 08:26:00   \n",
+       "1                 white metal lantern         6  2010-12-01 08:26:00   \n",
+       "2      cream cupid hearts coat hanger         8  2010-12-01 08:26:00   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country  amount_spent  \n",
+       "0       2.55       17850  United Kingdom         15.30  \n",
+       "1       3.39       17850  United Kingdom         20.34  \n",
+       "2       2.75       17850  United Kingdom         22.00  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "orders = pd.read_csv('../data/Orders.csv')\n",
+    "orders.head(3)"
    ]
   },
   {
@@ -81,11 +197,282 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12346</th>\n",
+       "      <td>77183.60</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12347</th>\n",
+       "      <td>4310.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12348</th>\n",
+       "      <td>1797.24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            amount_spent\n",
+       "CustomerID              \n",
+       "12346           77183.60\n",
+       "12347            4310.00\n",
+       "12348            1797.24"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "amount_spent_agg = orders.groupby(['CustomerID'])[['amount_spent']].sum()\n",
+    "amount_spent_agg.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>total_amount_spent</th>\n",
+       "      <th>cus_status</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>12346</th>\n",
+       "      <td>77183.60</td>\n",
+       "      <td>VIP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12347</th>\n",
+       "      <td>4310.00</td>\n",
+       "      <td>preferred</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12348</th>\n",
+       "      <td>1797.24</td>\n",
+       "      <td>preferred</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            total_amount_spent cus_status\n",
+       "CustomerID                               \n",
+       "12346                 77183.60        VIP\n",
+       "12347                  4310.00  preferred\n",
+       "12348                  1797.24  preferred"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "amount_spent_agg['cus_status'] = pd.qcut(amount_spent_agg['amount_spent'], q=[0, .75, .95, 1], labels=['normal', 'preferred', 'VIP'])\n",
+    "amount_spent_agg.rename(columns={'amount_spent':'total_amount_spent'}, inplace=True)\n",
+    "amount_spent_agg.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "      <th>total_amount_spent</th>\n",
+       "      <th>cus_status</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>61619</td>\n",
+       "      <td>541431</td>\n",
+       "      <td>23166</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>medium ceramic top storage jar</td>\n",
+       "      <td>74215</td>\n",
+       "      <td>2011-01-18 10:01:00</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>12346</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>77183.6</td>\n",
+       "      <td>77183.6</td>\n",
+       "      <td>VIP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>14938</td>\n",
+       "      <td>537626</td>\n",
+       "      <td>85116</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>black candelabra t-light holder</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2010-12-07 14:57:00</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>12347</td>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>25.2</td>\n",
+       "      <td>4310.0</td>\n",
+       "      <td>preferred</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>14939</td>\n",
+       "      <td>537626</td>\n",
+       "      <td>22375</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>12</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>airline bag vintage jet set brown</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2010-12-07 14:57:00</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>12347</td>\n",
+       "      <td>Iceland</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>4310.0</td>\n",
+       "      <td>preferred</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  InvoiceNo StockCode  year  month  day  hour  \\\n",
+       "0       61619     541431     23166  2011      1    2    10   \n",
+       "1       14938     537626     85116  2010     12    2    14   \n",
+       "2       14939     537626     22375  2010     12    2    14   \n",
+       "\n",
+       "                         Description  Quantity          InvoiceDate  \\\n",
+       "0     medium ceramic top storage jar     74215  2011-01-18 10:01:00   \n",
+       "1    black candelabra t-light holder        12  2010-12-07 14:57:00   \n",
+       "2  airline bag vintage jet set brown         4  2010-12-07 14:57:00   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country  amount_spent  total_amount_spent  \\\n",
+       "0       1.04       12346  United Kingdom       77183.6             77183.6   \n",
+       "1       2.10       12347         Iceland          25.2              4310.0   \n",
+       "2       4.25       12347         Iceland          17.0              4310.0   \n",
+       "\n",
+       "  cus_status  \n",
+       "0        VIP  \n",
+       "1  preferred  \n",
+       "2  preferred  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "orders_final = pd.merge(orders, amount_spent_agg, how = 'right', on = 'CustomerID')\n",
+    "orders_final.head(3)"
    ]
   },
   {
@@ -99,11 +486,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000002354960EC70>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "orders_country = orders_final.groupby(['Country'])[['cus_status']]\n",
+    "orders_country"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "United Kingdom     84185\n",
+       "EIRE                7077\n",
+       "France              3290\n",
+       "Germany             3127\n",
+       "Netherlands         2080\n",
+       "Australia            898\n",
+       "Portugal             681\n",
+       "Switzerland          594\n",
+       "Spain                511\n",
+       "Norway               420\n",
+       "Channel Islands      364\n",
+       "Finland              294\n",
+       "Cyprus               248\n",
+       "Singapore            222\n",
+       "Japan                205\n",
+       "Sweden               198\n",
+       "Belgium               54\n",
+       "Denmark               36\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "VIP_df = orders_final[orders_final['cus_status'].str.contains('VIP')].groupby('Country').size()\n",
+    "VIP_df.sort_values(ascending=False)"
    ]
   },
   {
@@ -115,11 +554,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "United Kingdom     221635\n",
+       "Germany              7349\n",
+       "EIRE                 7238\n",
+       "France               6301\n",
+       "Netherlands          2080\n",
+       "Spain                1569\n",
+       "Belgium              1557\n",
+       "Switzerland          1370\n",
+       "Portugal             1093\n",
+       "Australia            1028\n",
+       "Norway               1028\n",
+       "Channel Islands       589\n",
+       "Italy                 507\n",
+       "Finland               504\n",
+       "Cyprus                451\n",
+       "Sweden                273\n",
+       "Japan                 272\n",
+       "Singapore             222\n",
+       "Denmark               217\n",
+       "Israel                214\n",
+       "Iceland               182\n",
+       "Austria               158\n",
+       "Poland                149\n",
+       "Canada                135\n",
+       "Malta                  67\n",
+       "Lebanon                45\n",
+       "Greece                 32\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "VIP_preferred_df = orders_final[orders_final['cus_status'].str.contains('VIP|preferred')].groupby('Country').size()\n",
+    "VIP_preferred_df.sort_values(ascending=False)"
    ]
   }
  ],
@@ -139,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
